# scrape_nhs_conditions

./: .gitignore  .secrets_example  README.md  nhs_conditions_raw.jsonl  pyproject.toml  requirements.txt  scrape_nhs_conditions.ipynb
.github/workflows/: ci.yml  release.yml
src/data_ingestion/: simple_nhs_conditions_scrape.py
src/processing/: process_html.py
src/scrape_nhs_conditions/processing/: process_html.py
tests/unittests/: test_simple_nhs_conditions_scrape.py
